force-app/main/default/objects/Funding_Opportunity_Announcement__c/Funding_Opportunity_Announcement__c.object-meta.xml
<CustomObject>
    <label>Funding Opportunity Announcement</label>
    <nameField>
        <displayFormat>DE-FOA-{0000000}</displayFormat>
        <label>FOA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Opportunity Announcements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>