force-app/main/default/objects/Funding_Opportunity_Announcement__c/fields/Concept_Paper_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Concept_Paper_Submission_Deadline__c</fullName>
    <label>Concept Paper Submission Deadline</label>
    <type>DateTime</type>
</CustomField>