force-app/main/default/objects/Funding_Opportunity_Announcement__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <label>Contact Information</label>
    <type>Email</type>
</CustomField>