force-app/main/default/objects/Funding_Opportunity_Announcement__c/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <label>Documents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>