force-app/main/default/objects/Funding_Opportunity_Announcement__c/fields/FOA_Name__c.field-meta.xml
<CustomField>
    <fullName>FOA_Name__c</fullName>
    <label>FOA Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>