force-app/main/default/objects/Funding_Opportunity_Announcement__c/fields/Full_Application_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Full_Application_Submission_Deadline__c</fullName>
    <label>Full Application Submission Deadline</label>
    <type>DateTime</type>
</CustomField>