force-app/main/default/objects/Funding_Opportunity_Announcement__c/fields/Webinar_Details__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Details__c</fullName>
    <label>Webinar Details</label>
    <length>1600</length>
    <type>LongTextArea</type>
</CustomField>